--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Diego Martins (diego.benweide@gmail.com)",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.1",
     "express": "^4.17.2"
   }
 }
